syntax = "proto3";

option go_package = "v1";
option java_package = "io.stackrox.proto.api.v1";

import weak "google/api/annotations.proto";
import "api/v1/empty.proto";

package v1;

message SuppressCVERequest {
    repeated string ids         = 1;
    oneof set_suppressed {
        bool        suppressed  = 2;
    }
}

// CVEService APIs can be used to manage cves.
service CVEService {
    // SuppressCVE suppresses cves.
    rpc SuppressCVEs (SuppressCVERequest) returns (Empty) {
        option (google.api.http) = {
            patch: "/v1/cves/suppress"
            body: "*"
        };
    }
}
